# AeroCodex

./: .gitignore  ARTIFACT_MANIFEST.md  Cargo.toml  DATA_MANIFEST.toml  LICENSE  NOTICE  README.md  biosim_plus_friend_test_report_v2.md  biosim_plus_minimal_habitat_scenario_contract.yaml
.github/: PULL_REQUEST_TEMPLATE.md
biosim-rs/: README.md
checksums/: SHA256SUMS
crates/aero-codex-astrodynamics/: Cargo.toml
crates/aero-codex-astrodynamics/src/: lib.rs  oracle.rs
crates/aero-codex-gas-dynamics/: Cargo.toml
crates/aero-codex-gas-dynamics/src/: lib.rs
crates/aero-codex-heat-transfer/: Cargo.toml
crates/aero-codex-heat-transfer/src/: lib.rs
crates/aero-codex-life-support/: Cargo.toml
crates/aero-codex-life-support/examples/: biosim_friend_test_smoke.rs  biosim_synthetic_resource_scenario.rs  thinfilm_demo.rs
crates/aero-codex-life-support/src/: biosim_process.rs  biosim_resource_tick.rs  biosim_scenario.rs  biosim_scenario_report.rs  brlss_backbone.rs  lib.rs  melissa_photobioreactor.rs  nitrifying_biofilm.rs  thinfilm_algal_biofilm.rs  thinfilm_provenance.rs
crates/aero-codex-propulsion/: Cargo.toml
crates/aero-codex-propulsion/src/: lib.rs
crates/aero-codex-structures/: Cargo.toml
crates/aero-codex-structures/src/: lib.rs
data-governance/: DATA_POLICY.md  DATA_REGISTRY.yaml
docs/: index.md  nomenclature_policy.md
equation-batches/: README.md  a4-atmosphere-thermo-gasdynamics.tsv  a5-aerodynamics-flight-structures.tsv  a7-astrodynamics-orekit-foundation.tsv  a8-life-support-biosim-foundation.tsv  m00-angle-vector.tsv  m00-canonical-units.tsv
formula-schemas/: README.md
formula-vault/: README.md
nomenclature/: ADOPTION_PLAN.md  CHANGELOG.md  INTEGRATION_SUMMARY.md  MANIFEST.json  README.md  REFERENCES.md
schemas/: formula_promotion_packet.schema.json  formula_registry.schema.json  formula_sidecar.schema.json
scripts/: equation_batch.py  friend_test_local.ps1  friend_test_local.sh  package_beta1_release.py  verify_beta1_release.py  verify_external_m07_attitude_dynamics_control_policy_wave1.py  verify_external_m07_attitude_frame_policy_wave1.py  verify_external_m07_attitude_frame_policy_wave2.py  verify_external_m07_classifier_refresh_manual_source_review_wave1.py  verify_external_m07_coordinate_transform_frame_time_policy_wave1.py  verify_external_m07_coordinate_transform_frame_time_policy_wave2.py  verify_external_m07_cr3bp_external_data_policy_wave1.py  verify_external_m07_final_residual_backlog_closure_wave1.py  verify_external_m07_j2_perturbation_policy_wave1.py  verify_external_m07_j2_perturbation_policy_wave2.py  verify_external_m07_j2_perturbation_policy_wave3.py  verify_external_m07_orbital_geometry_conic_wave1.py  verify_external_m07_orbital_geometry_conic_wave10.py  verify_external_m07_orbital_geometry_conic_wave2.py  verify_external_m07_orbital_geometry_conic_wave3.py  verify_external_m07_orbital_geometry_conic_wave4.py  verify_external_m07_orbital_geometry_conic_wave5.py  verify_external_m07_orbital_geometry_conic_wave6.py  verify_external_m07_orbital_geometry_conic_wave7.py  verify_external_m07_orbital_geometry_conic_wave8.py  verify_external_m07_orbital_geometry_conic_wave9.py  verify_external_m07_relative_motion_finite_burn_policy_wave1.py  (+15 more)
validation/: README.md  (+3 more)
(+354 files in other folders)
