[workspace]
resolver = "2"
members = [
    "crates/aero-codex-core",
    "crates/aero-codex-constants",
    "crates/aero-codex-atmosphere",
    "crates/aero-codex-thermo",
    "crates/aero-codex-gas-dynamics",
    "crates/aero-codex-aerodynamics",
    "crates/aero-codex-propulsion",
    "crates/aero-codex-heat-transfer",
    "crates/aero-codex-structures",
    "crates/aero-codex-flight-dynamics",
    "crates/aero-codex-astrodynamics",
    "crates/aero-codex-life-support",
    "xtask",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ConorMcGibboney/AeroCodex"
readme = "README.md"
rust-version = "1.74"

[workspace.lints.rust]
unsafe_code = "forbid"
