[package]
name = "aero-codex-astrodynamics"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "aero_codex_astrodynamics"
path = "src/lib.rs"

[dependencies]
aero-codex-core = { path = "../aero-codex-core" }
aero-codex-constants = { path = "../aero-codex-constants" }

[lints]
workspace = true
