[package]
name = "aero-codex-gas-dynamics"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "aero_codex_gas_dynamics"
path = "src/lib.rs"

[dependencies]
aero-codex-constants = { path = "../aero-codex-constants" }
aero-codex-core = { path = "../aero-codex-core" }

[lints]
workspace = true
