[package]
name = "aero-codex-propulsion"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "aero_codex_propulsion"
path = "src/lib.rs"

[dependencies]
aero-codex-core = { path = "../aero-codex-core" }

[lints]
workspace = true
